Build out navbar on Homepage - add and link favicon icon - add viewport meta tag - customize page title - create and import css reset file - add folder images and use background-image on homepage - add colors, font-size and mobile breakpoint variables - add navbar, style navbar and positioning fixed left on desktop and fixed bottom on mobile - add navbar icons and link w3schools CDN font awesome

--- a/less/index.less
+++ b/less/index.less
@@ -1,59 +1,66 @@
-// Is this working?
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+@import "reset";
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+// variables
+//colors
+@shaddy-blue: #424b54;
+@back-petal: #e59301;
+@pure-white: #fff;
+
+
+//Desktop fonts
+@small-font: 3em;
+
+//breakpoints 
+@mobile-breakpoint: 500px;
+
+:root {
+	font-size: 62.5%;
+	
+	@media (max-width: @mobile-breakpoint){
+		font-size: 50%;
+	} 
 }
 
-/* Set every element's box-sizing to border-box */
-* {
-    box-sizing: border-box;
+
+.home-section {
+  width: 100%;
+  height: 100vh;
+  background-image: url('../images/bg-abstract.jpg');
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-html, body {
-    height: 100%;
+.active {
+  color: @pure-white;
 }
 
+nav {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  background: @shaddy-blue;
+  height: 100%;
+	width: 5%;
+	align-self: flex-start;
+  align-items: center;
+	justify-content: space-around;
+	
+	@media (max-width: @mobile-breakpoint) {
+	 width: 100%;
+	 height: 50px;
+	 flex-direction: row;
+	 bottom: 0;
+	}
+
+  a {
+    color: @back-petal;
+    font-size: @small-font;
+    transition: 0.3s ease-in;
+
+    &:hover {
+      .active;
+    }
+  }
+}
